add wither phase to endgame